--- a/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
+++ b/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
@@ -33,55 +33,6 @@ server {
 
     #Set up reverse proxy to redirect requests to backend
     location /api/ {
-    #    #proxy_pass https://$REACT_APP_BE_HOST:$REACT_APP_BE_PORT/api/;
-        proxy_pass https://$REACT_APP_BE_HOST/api/;
-        proxy_read_timeout 1m;
-        proxy_ssl_verify off;
-    }
-
-    location /api/qdepth {
-        proxy_pass https://$REACT_APP_BE_HOST/api/qdepth;
-        proxy_read_timeout 1m;
-        proxy_ssl_verify off;
-    }
-
-    location /api/sub {
-        proxy_pass https://$REACT_APP_BE_HOST/api/sub;
-        proxy_read_timeout 1m;
-        proxy_ssl_verify off;
-    }
-
-    location /api/unsub {
-        proxy_pass https://$REACT_APP_BE_HOST/api/unsub;
-        proxy_read_timeout 1m;
-        proxy_ssl_verify off;
-    }
-
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
-}
-
-server {
-    listen       443;
-    listen  [::]:443;
-    server_name  localhost;
-
-    #access_log  /var/log/nginx/host.access.log  main;
-
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
-
-    # Set up reverse proxy to redirect requests to backend
-    location /api/ {
         # proxy_pass https://$REACT_APP_BE_HOST:$REACT_APP_BE_PORT/api/;
         proxy_pass https://$REACT_APP_BE_HOST/api/;
         proxy_read_timeout 1m;
@@ -89,7 +40,7 @@ server {
     }
 
     location /api/qdepth {
-        proxy_pass https://$REACT_APP_BE_HOST/api/qdepth;
+        proxy_pass https://$REACT_APP_BE_HOST:$REACT_APP_BE_PORT/api/qdepth;
         proxy_read_timeout 1m;
         proxy_ssl_verify off;
     }
