Allow BE to be slow in starting

--- a/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
+++ b/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
@@ -21,7 +21,7 @@ upstream $REACT_APP_BE_HOST {
 server {
     listen       80;
     listen  [::]:80;
-    server_name  localhost;
+    server_name  $hostname;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
