--- a/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
+++ b/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.template
@@ -18,9 +18,9 @@
 #    server $REACT_APP_BE_HOST:$REACT_APP_BE_PORT max_fails=0;
 #}
 
-upstream be.1ervx8evaqko.eu-gb.codeengine.appdomain.cloud {
-    server be.1ervx8evaqko.eu-gb.codeengine.appdomain.cloud:443 max_fails=0;
-}
+#upstream be.1ervx8evaqko.eu-gb.codeengine.appdomain.cloud {
+#    server be.1ervx8evaqko.eu-gb.codeengine.appdomain.cloud:443 max_fails=0;
+#}
 
 
 
@@ -40,30 +40,32 @@ server {
     #Set up reverse proxy to redirect requests to backend
     location /api/ {
         # proxy_pass https://$REACT_APP_BE_HOST:$REACT_APP_BE_PORT/api/;
-        proxy_pass https://$REACT_APP_BE_HOST/api/;
-        proxy_read_timeout 1m;
-        proxy_ssl_verify off;
+        #proxy_pass https://$REACT_APP_BE_HOST/api/;
+        #proxy_read_timeout 1m;
+        #proxy_ssl_verify off;
+
+        return 302 https:$REACT_APP_BE_HOST/$request_uri;
     }
 
-    location /api/qdepth {
-        proxy_pass https://be.1ervx8evaqko.eu-gb.codeengine.appdomain.cloud/api/qdepth;
-        proxy_read_timeout 1m;
-        proxy_ssl_verify off;
+    #location /api/qdepth {
+    #    proxy_pass https://be.1ervx8evaqko.eu-gb.codeengine.appdomain.cloud/api/qdepth;
+    #    proxy_read_timeout 1m;
+    #    proxy_ssl_verify off;
 
-        return 302 https://be.1ervx8evaqko.eu-gb.codeengine.appdomain.cloud/api/qdepth;
-    }
+    #    return 302 https://be.1ervx8evaqko.eu-gb.codeengine.appdomain.cloud/api/qdepth;
+    #}
 
-    location /api/sub {
-        proxy_pass https://$REACT_APP_BE_HOST/api/sub;
-        proxy_read_timeout 1m;
-        proxy_ssl_verify off;
-    }
+    #location /api/sub {
+    #    proxy_pass https://$REACT_APP_BE_HOST/api/sub;
+    #    proxy_read_timeout 1m;
+    #    proxy_ssl_verify off;
+    #}
 
-    location /api/unsub {
-        proxy_pass https://$REACT_APP_BE_HOST/api/unsub;
-        proxy_read_timeout 1m;
-        proxy_ssl_verify off;
-    }
+    #location /api/unsub {
+    #    proxy_pass https://$REACT_APP_BE_HOST/api/unsub;
+    #    proxy_read_timeout 1m;
+    #    proxy_ssl_verify off;
+    #}
 
     #error_page  404              /404.html;
 
