--- a/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.proxy.template
+++ b/ibm-messaging-mq-cloud-showcase-app/frontend/nginx.conf.proxy.template
@@ -1,4 +1,3 @@
-#!/usr/bin/env sh
 #  Copyright 2024 IBM Corp.
 #  Licensed under the Apache License, Version 2.0 (the 'License');
 #  you may not use this file except in compliance with the License.
@@ -12,22 +11,26 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-set -eu
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name  $hostname;
 
-nginxTemplate="nginx.conf.template"
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
 
-if [ $REACT_APP_FE_AS_PROXY == true ]
-then
-        nginxTemplate="nginx.conf.proxy.template"
-fi
+    #Set up redirect for requests to backend
+    location /api/ {
+        proxy_pass ${HTTP_PROTOCOL}://${REACT_APP_BE_HOST}:${REACT_APP_BE_PORT}/api/;
+    }
 
-if [ $REACT_APP_BE_TLS == true ]
-then
-        export HTTP_PROTOCOL="https"
-else    
-        export HTTP_PROTOCOL="http"
-fi
-
-envsubst '${HTTP_PROTOCOL} ${REACT_APP_BE_HOST} ${REACT_APP_BE_PORT}' < /etc/nginx/conf.d/${nginxTemplate} > /etc/nginx/conf.d/default.conf
-
-exec "$@"
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+}
