--- a/ibm-messaging-mq-cloud-showcase-app/docker-compose.yaml
+++ b/ibm-messaging-mq-cloud-showcase-app/docker-compose.yaml
@@ -30,8 +30,8 @@ services:
       - REACT_APP_BE_HOST=be
       - REACT_APP_IS_FOR_CODING_CHALLENGE=false
       - REACT_APP_BE_PORT=8080
-      - REACT_APP_BE_TLS=true
-      - REACT_APP_FE_AS_PROXY=false
+      - REACT_APP_BE_TLS=false
+      - REACT_APP_FE_AS_PROXY=true
   be:
     build:
       context: backend/.
