--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -8,5 +8,13 @@
   },
   "engines": {
     "node": ">16.0.0"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "devDependencies": {
+    "chai": "^4.4.1",
+    "mocha": "^10.4.0",
+    "chai-as-promised": "^7.1.1"
   }
 }
