Add reference back to the API consumed

--- a/Go/services/catalog-app.yaml
+++ b/Go/services/catalog-app.yaml
@@ -6,4 +6,5 @@ spec:
   type: service
   owner: ibm-mq-devex
   lifecycle: production
-  consumesApis: ibm-mq-go-api
+  consumesApis: 
+    - ibm-mq-go-api
