Add link to API spec

--- a/Go/services/catalog-app.yaml
+++ b/Go/services/catalog-app.yaml
@@ -1,12 +1,27 @@
+#
+# * Copyright 2024 IBM Corp.
+# *
+# * Licensed under the Apache License, Version 2.0 (the 'License');
+# * you may not use this file except in compliance with the License.
+# * You may obtain a copy of the License at
+# *
+# * http://www.apache.org/licenses/LICENSE-2.0
+# *
+# * Unless required by applicable law or agreed to in writing, software
+# * distributed under the License is distributed on an "AS IS" BASIS,
+# * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# * See the License for the specific language governing permissions and
+# * limitations under the License.
+
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{ values.name | dump }}
-    links: 
-      - url: https://github.com/ibm-messaging/mq-golang
-        title: Go API for IBM MQ
-        type: API
-        icon: api      
+  links: 
+    - url: https://github.com/ibm-messaging/mq-golang
+      title: Go API for IBM MQ
+      type: API
+      icon: api      
 spec:
   type: service
   owner: ibm-mq-devex
