--- a/backstage/templates/spring-steps.yaml
+++ b/backstage/templates/spring-steps.yaml
@@ -27,7 +27,7 @@
   name: Publish
   action: publish:github
   input:
-    allowedHosts: ['github.com', 'github.ibm.com']
+    allowedHosts: ['github.com']
     description: This is ${{ parameters.name }}
     repoUrl: ${{ parameters.repoUrl }}
     repoVisibility: ${{ parameters.visibility }}
