Add option of using secrets for credentials in compose sample

--- a/container/queuemanager/compose/docker-compose-secrets.yaml
+++ b/container/queuemanager/compose/docker-compose-secrets.yaml
@@ -18,8 +18,7 @@
 
 services:
   mq:
-    # image: "icr.io/ibm-messaging/mq:latest"
-    image: "ibm-mqadvanced-server-dev:9.4.1.0-arm64"
+    image: "icr.io/ibm-messaging/mq:latest"
     ports:
       - 9443:9443
       - 1414:1414
